@@ -25,6 +25,7 @@ Changelog
  * Fix: `pageurl` and `slugurl` tags no longer fail when `request.site` is `None` (Samir Shah)
  * Fix: Output form media on add/edit image forms with custom models (Matt Westcott)
  * Fix: Layout for the clear checkbox in default FileField widget (Mikalai Radchuk)
+ * Fix: Remove ASCII conversion from Postgres search backend, to support stemming in non-Latin alphabets (Pavel Denisov)
 
 
 2.6.1 (05.08.2019)
